Compatibility with jdk16