@@ -8,7 +8,6 @@ plugins{
 ext{
     caffeine_version = '3.0.2'
     evalex_version = '2.5'
-    graalvm_version = '21.1.0'
     lavaplayer_version = '1.3.77'
 
     discord4j_stores = '3.2.0'
@@ -22,6 +21,9 @@ ext{
 allprojects{
     apply plugin: 'java-library'
     apply plugin: 'com.github.ben-manes.versions'
+
+    targetCompatibility = 16
+    sourceCompatibility = 16
 
     repositories{
         mavenCentral()
@@ -44,16 +46,11 @@ allprojects{
     tasks.withType(JavaCompile){
         options.encoding = "UTF-8"
         options.incremental = true
-        options.compilerArgs += ["--enable-preview"]
+        options.compilerArgs += ["-Xlint:deprecation"]
     }
 
     tasks.withType(Test){
         useJUnitPlatform()
-        jvmArgs += ["--enable-preview"]
-    }
-
-    tasks.withType(JavaExec){
-        jvmArgs += ["--enable-preview"]
     }
 }
 
@@ -69,7 +66,6 @@ dependencies{
 
     implementation "com.github.ben-manes.caffeine:caffeine:$caffeine_version"
     implementation "com.udojava:EvalEx:$evalex_version"
-    // implementation "org.graalvm.js:js:$graalvm_version"
     implementation "com.sedmelluq:lavaplayer:$lavaplayer_version"
 
     // data dependencies
